--- a/showroom.html
+++ b/showroom.html
@@ -86,7 +86,7 @@
 
 
       <div class="header_logo">
-    <button class="buttongoweb" onclick="goToLink('news.html')"><span class="mdi mdi-chevron-left"></span>    </button>
+    <button class="buttongoweb" onclick="goToLink('home.html')"><span class="mdi mdi-chevron-left"></span>    </button>
         <span style="font-size: 20px; font-weight: 700; font-family: 'Zen Maru Gothic';margin-left: 10px;" id="liveMemberName" ></span>
         <div style="width: 100%;">
         <div style="background: #FF2408; border-radius: 10px; display: flex; justify-content: center; align-items: center;padding: 5px; width: 70px;margin-left: auto;margin-right: 10px;">
