--- a/idn.html
+++ b/idn.html
@@ -86,15 +86,15 @@
 
 
       <div class="header_logo">
-    <button class="buttongoweb" onclick="goToLink('home.html')"><span class="mdi mdi-chevron-left"></span></button>
-        <span style="font-size: 16px; font-weight: 700; font-family: 'Zen Maru Gothic';margin-left: 10px;" id="liveMemberName" ></span>
+    <button class="buttongoweb" onclick="goToLink('home.html')"><span class="mdi mdi-chevron-left"></span>    </button>
+        <span style="font-size: 20px; font-weight: 700; font-family: 'Zen Maru Gothic';margin-left: 10px;" id="liveMemberName" ></span>
         <div style="width: 100%;">
         <div style="background: #FF2408; border-radius: 10px; display: flex; justify-content: center; align-items: center;padding: 5px; width: 70px;margin-left: auto;margin-right: 10px;">
     <div class="live-indicator" >
       <div class="circle" style="background: white;"></div>
       <div class="pulse" style="background: white;"></div>
     </div>
-    <h1 style="font-size: 24px; margin-left: 10px;font-family: 'Zen Maru Gothic';">SR</h1>
+    <h1 style="font-size: 24px; margin-left: 10px;font-family: 'Zen Maru Gothic';"id="liveType"></h1>
         </div>
         </div>
    
@@ -120,7 +120,7 @@
         <div style="display: flex; flex-direction: column; width: 90%; background: gray; padding: 20px;display: none;">
           <div class="display: flex;">
             
-                          <h1 class="titleup"style="font-size: 14px;"> <span id="liveMemberName"></span></h1>
+                          <h1 class="titleup"> <span id="liveMemberName"></span></h1>
           </div>
           <div class="display: flex;">
     <p id="startDate"></p>
@@ -129,7 +129,7 @@
     <p id="startTime"></p>
     </div>
     <div class="display: flex;">
-<p id="liveType"></p>
+
     </div>
         </div>
 <script>
