--- a/showroom.html
+++ b/showroom.html
@@ -153,7 +153,7 @@
   }
 
   // Menampilkan informasi tambahan seperti nama member, jumlah viewers, dll.
-  document.getElementById('liveMemberName').textContent = memberName + 'JKT48' || 'Nama Tidak Ditemukan';
+  document.getElementById('liveMemberName').textContent = memberName || 'Nama Tidak Ditemukan';
   
 
   if (startDate) {
