--- a/event.html
+++ b/event.html
@@ -112,7 +112,7 @@
     <div style="margin-left: auto; font-size: 14px; color: #b0b0b0;" id="liveCount">0 Member</div>
   </div>
   <div id="noLiveMessage" style="text-align: center; color: #b0b0b0;"></div>
-  <div style="display: flex;   overflow-x: auto; gap: 10px; margin-top: 20px; width: 100%; flex-direction: row-reverse;" class="card-nowlive-container"></div>
+  <div style="display: flex;   overflow-x: auto; gap: 10px; margin-top: 20px; width: 100%;" class="card-nowlive-container"></div>
   
 </div>
     <br>
