--- a/live.html
+++ b/live.html
@@ -98,7 +98,7 @@
                 <h2 class="titleup"id="title-idn">
 
                 </h2><br>
-                <div id="liveList" style="display:block;">
+                <div id="liveList" style="display:flex;flex-direction: column-reverse;">
                     <!-- Content for Live Idn -->
 
                 </div>
