--- a/monitoring.html
+++ b/monitoring.html
@@ -7,9 +7,18 @@
   <script defer src="monitoring.js"></script>
 </head>
 <body>
-  <h1>Live Member Monitoring</h1>
-  <p id="liveCount">0 Member Live</p>
-  <p id="noLiveMessage">Tidak ada yang live</p>
-  <div class="live-indicator"></div>
+    <div style="padding: 20px;">
+  <div style="display: flex; align-items: center; padding: 10px 0;">
+<div class="nolive-indicator">
+  <div class="circle"></div>
+  <div class="pulse"></div>
+</div>
+    <h1 style="font-size: 24px; margin-left: 10px;">Live</h1>
+    <div style="margin-left: auto; font-size: 14px; color: #b0b0b0;" id="liveCount">0 Member</div>
+  </div>
+  <div id="noLiveMessage" style="text-align: center; color: #b0b0b0;"></div>
+  <div style="display: flex;   overflow-x: auto; gap: 10px; margin-top: 20px; width: 100%;" class="card-nowlive-container"></div>
+  
+</div>
 </body>
 </html>
