--- a/showroom.html
+++ b/showroom.html
@@ -187,8 +187,11 @@
     <br>
     <br>
     <br>
-            <footer>
-                By <a style="text-decoration:none" href=""> Januar Adhi N</a>
+            <footer style="text-align: center; display:flex; justify-content: center; align-items: center; width: 100%;">
+               <p style="color: white;">
+                 
+                 @Januar Adhi N
+               </p> 
 
                 <br>
             </footer>
