--- a/monitoring.html
+++ b/monitoring.html
@@ -13,7 +13,8 @@
   <div class="circle"></div>
   <div class="pulse"></div>
 </div>
-    <h1 style="font-size: 24px; margin-left: 10px;">Live</h1>
+    <h1 style="font-size: 24px; margin-left: 10px;">Live Monitoring Server Notification</h1>
+    <span>Admin</span>
     <div style="margin-left: auto; font-size: 14px; color: #b0b0b0;" id="liveCount">0 Member</div>
   </div>
   <div id="noLiveMessage" style="text-align: center; color: #b0b0b0;"></div>
