--- a/home.html
+++ b/home.html
@@ -131,9 +131,9 @@
   <div class="pulse"></div>
 </div>
     <h1 style="font-size: 24px; margin-left: 10px;">Live</h1>
-    <div style="margin-left: auto; font-size: 14px; color: #b0b0b0;" id="liveCount">0 Member</div>
+    <div style="margin-left: auto; font-size: 14px; color: #b0b0b0; font-weight: 500;" id="liveCount">0 Member</div>
   </div>
-  <div id="noLiveMessage" style="text-align: center; color: #b0b0b0;"></div>
+  <div id="noLiveMessage" style="text-align: center; color: #b0b0b0;font-weight: 500;"></div>
   <div style="display: flex; flex-wrap: wrap;  gap: 10px; margin-top: 20px; width: 100%; " class="card-nowlive-container"></div>
   
 </div>
