--- a/event.html
+++ b/event.html
@@ -71,7 +71,7 @@
 
       <div class="header_logo">
     <button class="buttongoweb"><span class="fas fa-theater-masks"></span>    </button>
-        <span style="font-size: 27px; font-weight: 700; font-family: 'Zen Maru Gothic';margin-left: 10px;" >Event & Theater</span>
+        <span style="font-size: 20px; font-weight: 700; font-family: 'Zen Maru Gothic';margin-left: 10px;" >Event & Theater</span>
       </div>
 
 
@@ -79,7 +79,7 @@
             <div class="section">
                 <div class="container">
                     <div style="width: 100%; display: flex; flex-direction: column; margin-top: 35px;">
-                        <div class="titleup" style=" display: flex; align-items: center; gap: 10px; justify-content:center;margin-right: auto;margin-left: 10px;"><span class="icon"><i style="color:#3594FF;" class="mdi mdi-theater"></i></span> <h1 style="font-size: 19px;">Jadwal Theater</h1> </div>
+                        <div class="titleup" style=" display: flex; align-items: center; gap: 10px; justify-content:center;margin-right: auto;margin-left: 10px;"><span class="icon"><i style="color:#3594FF;" class="mdi mdi-theater"></i></span> <h1 style="font-size: 23px;">Jadwal Theater</h1> </div>
                         <br>
                        
                         <p id="noTheaterMessage"></p>
@@ -109,9 +109,9 @@
   <div class="pulse"></div>
 </div>
     <h1 style="font-size: 24px; margin-left: 10px;">Live</h1>
-    <div style="margin-left: auto; font-size: 14px; color: #b0b0b0;" id="liveCount">0 Member</div>
+    <div style="margin-left: auto; font-size: 14px; color: #b0b0b0;font-weight: 500;" id="liveCount">0 Member</div>
   </div>
-  <div id="noLiveMessage" style="text-align: center; color: #b0b0b0;"></div>
+  <div id="noLiveMessage" style="text-align: center; color: #b0b0b0;font-weight: 500;"></div>
   <div style="display: flex;   overflow-x: auto; gap: 10px; margin-top: 20px; width: 100%;" class="card-nowlive-container"></div>
   
 </div>
