--- a/idn.html
+++ b/idn.html
@@ -87,7 +87,7 @@
 
       <div class="header_logo">
     <button class="buttongoweb" onclick="goToLink('home.html')"><span class="mdi mdi-chevron-left"></span>    </button>
-        <span style="font-size: 20px; font-weight: 700; font-family: 'Zen Maru Gothic';margin-left: 10px;" id="liveMemberName" ></span>
+        <span style="font-size: 20px; font-weight: 700; font-family: 'Zen Maru Gothic';margin-left: 10px; width: 100%;" id="liveMemberName" ></span>
         <div style="width: 100%;">
         <div style="background: #FF2408; border-radius: 10px; display: flex; justify-content: center; align-items: center;padding: 5px; width: 70px;margin-left: auto;margin-right: 10px;">
     <div class="live-indicator" >
@@ -155,7 +155,7 @@
   // Menampilkan informasi tambahan seperti nama member, jumlah viewers, dll.
   if (memberName) {
   // Jika nama sudah mengandung "JKT48", gunakan nama seperti apa adanya
-  document.getElementById('liveMemberName').textContent = memberName.includes('JKT48') ? memberName : memberName + ' JKT48';
+  document.getElementById('liveMemberName').innerHTML = memberName.includes('JKT48') ? memberName : memberName + ' JKT48';
 } else {
   // Jika nama tidak ditemukan
   document.getElementById('liveMemberName').textContent = 'Nama Tidak Ditemukan';
