--- a/event.html
+++ b/event.html
@@ -108,7 +108,7 @@
   <div class="circle"></div>
   <div class="pulse"></div>
 </div>
-    <h1 style="font-size: 24px; margin-left: 10px;">Live</h1>
+    <h1 style="font-size: 24px; margin-left: 10px;">Now Live</h1>
     <div style="margin-left: auto; font-size: 14px; color: #b0b0b0;font-weight: 500;" id="liveCount">0 Member</div>
   </div>
   <div id="noLiveMessage" style="text-align: center; color: #b0b0b0;font-weight: 500;"></div>
