--- a/idn.html
+++ b/idn.html
@@ -112,6 +112,48 @@
 
       </div>
     </div>
+    <div style="width: 100%; display: flex; flex-direction: column;justify-content:center;margin-top: 20px; align-items: center; gap: 10px;">
+    <div style="display: flex; width: 87%;border-radius: 15px; background: #2A3347; gap: 10px; padding: 15px;justify-content: left; align-items: center;box-shadow: 1px black;">
+      <span style="font-size: 46px;" class="mdi mdi-application-edit"></span>
+      <div style="width: 100%; display: flex; flex-direction: column; justify-content: left;">
+        <span style="font-family: 'Zen Maru Gothic';font-size: 12px; opacity: 0.8;">Judul Live</span>
+                  <h1 style="font-size: 20px;" id="liveTitle"></h1>
+      </div>
+
+    </div>
+    <div style="display: flex; width: 95%;gap: 5px;">
+    <div style="display: flex; width: 87%;border-radius: 15px; background: #323D54; gap: 10px; padding: 15px;justify-content: left; align-items: center;box-shadow: 1px black;">
+      <span style="font-size: 30px;" class="mdi mdi-calendar"></span>
+      <div style="width: 100%; display: flex; flex-direction: column; justify-content: left;">
+        <span style="font-family: 'Zen Maru Gothic';font-size: 12px; opacity: 0.8;">Tanggal</span>
+                  <h1 style="font-size: 15px;" id="startDate"></h1>
+      </div>
+
+    </div>
+        <div style="display: flex; width: 87%;border-radius: 15px; background: #323D54; gap: 10px; padding: 15px;justify-content: left; align-items: center;box-shadow: 1px black;">
+      <span style="font-size: 30px;" class="mdi mdi-clock"></span>
+      <div style="width: 100%; display: flex; flex-direction: column; justify-content: left;">
+        <span style="font-family: 'Zen Maru Gothic';font-size: 12px; opacity: 0.8;">Jam</span>
+                  <h1 style="font-size: 15px;" id="startTime"></h1>
+      </div>
+
+    </div>
+    </div>
+            <div style="padding: 0px; width: 91%;">
+          <div style="display: flex; align-items: center; padding: 10px 0;">
+            <div class="live-indicator">
+              <div class="circle"></div>
+              <div class="pulse"></div>
+            </div>
+            <h1 style="font-size: 20px; margin-left: 10px;">Room Live</h1>
+            <div style="margin-left: auto; font-size: 14px; color: #b0b0b0;font-weight: 500;" id="liveCount">0 Member</div>
+          </div>
+          <div id="noLiveMessage" style="text-align: center; color: #b0b0b0;font-weight: 500;"></div>
+          <div style="display: flex;   overflow-x: auto; gap: 10px; margin-top: 20px; width: 100%;" class="card-nowlive-container"></div>
+
+        </div>
+    </div>
+
     <br>
     <hr><br>
   </div>
@@ -123,82 +165,89 @@
                           <h1 class="titleup"> <span id="liveMemberName"></span></h1>
           </div>
           <div class="display: flex;">
-    <p id="startDate"></p>
-    </div>
-    <div class="display: flex;">
-    <p id="startTime"></p>
-    </div>
+
     <div class="display: flex;">
 
     </div>
         </div>
-<script>
-  document.addEventListener("DOMContentLoaded", function () {
-    // Ambil parameter URL dari hash
-    const urlParams = new URLSearchParams(window.location.hash.substring(1));
-    const videoUrl = urlParams.get('url');
-    const memberName = urlParams.get('name');
-    const startDate = urlParams.get('start_date');
-    const liveType = urlParams.get('type'); // Menambahkan parameter untuk tipe live (IDN atau Showroom)
+ <script>
+    document.addEventListener("DOMContentLoaded", function () {
+  // Ambil parameter URL dari hash
+  const urlParams = new URLSearchParams(window.location.hash.substring(1));
+  const videoUrl = urlParams.get('url');
+  const memberName = urlParams.get('name');
+  const startDate = urlParams.get('start_date');
+  const liveType = urlParams.get('type');
+  const slug = urlParams.get('slug'); // Ambil slug dari URL
 
-    // Periksa apakah videoUrl sudah terisi dengan benar
-    const videoElement = document.getElementById('video');
-    if (videoUrl && videoElement) {
-      videoElement.src = videoUrl; // Set video URL
-      videoElement.style.display = 'block'; // Tampilkan video
-    } else {
-      console.error('Video URL tidak ditemukan!');
+  // Tampilkan slug sebagai judul live (jika ada)
+  const liveTitleElement = document.getElementById('liveTitle');
+  if (slug && liveTitleElement) {
+    liveTitleElement.textContent = decodeURIComponent(slug);
+  }
+
+  // Periksa apakah videoUrl sudah terisi dengan benar
+  const videoElement = document.getElementById('video');
+  if (videoUrl && videoElement) {
+    videoElement.src = videoUrl; // Set video URL
+    videoElement.style.display = 'block'; // Tampilkan video
+  } else {
+    console.error('Video URL tidak ditemukan!');
+  }
+
+  // Menampilkan informasi tambahan seperti nama member, jumlah viewers, dll.
+  const memberNameElement = document.getElementById('liveMemberName');
+  if (memberName && memberNameElement) {
+    // Jika nama sudah mengandung "JKT48", gunakan nama seperti apa adanya
+    memberNameElement.innerHTML = memberName.includes('JKT48') ? memberName : `${memberName} JKT48`;
+  } else if (memberNameElement) {
+    memberNameElement.textContent = 'Nama Tidak Ditemukan';
+  }
+
+  // Menampilkan tanggal dan waktu
+  if (startDate) {
+    const date = new Date(decodeURIComponent(startDate));
+
+    // Format Tanggal
+    const formattedDate = date.toLocaleDateString('id-ID', {
+      year: 'numeric',
+      month: 'long',
+      day: 'numeric',
+    });
+
+    // Format Jam
+    const formattedTime = date.toLocaleTimeString('id-ID', {
+      hour: '2-digit',
+      minute: '2-digit',
+    });
+
+    // Menampilkan Tanggal dan Jam secara terpisah
+    const startDateElement = document.getElementById('startDate');
+    const startTimeElement = document.getElementById('startTime');
+    
+    if (startDateElement) {
+      startDateElement.innerHTML = ` ${formattedDate}`;
     }
-
-    // Menampilkan informasi tambahan seperti nama member, jumlah viewers, dll.
-    const memberNameElement = document.getElementById('liveMemberName');
-    if (memberName && memberNameElement) {
-      // Jika nama sudah mengandung "JKT48", gunakan nama seperti apa adanya
-      memberNameElement.innerHTML = memberName.includes('JKT48') ? memberName : `${memberName} JKT48`;
-    } else if (memberNameElement) {
-      memberNameElement.textContent = 'Nama Tidak Ditemukan';
+    if (startTimeElement) {
+      startTimeElement.innerHTML = ` ${formattedTime} WIB`;
     }
+  }
 
-    // Menampilkan tanggal dan waktu
-    if (startDate) {
-      const date = new Date(decodeURIComponent(startDate));
+  // Menampilkan jenis live (IDN atau Showroom)
+  const liveTypeElement = document.getElementById('liveType');
+  if (liveTypeElement) {
+    liveTypeElement.innerHTML =
+      liveType === 'idn'
+        ? 'IDN'
+        : liveType === 'showroom'
+        ? 'Showroom'
+        : 'Tidak Diketahui';
+  }
 
-      // Format Tanggal
-      const formattedDate = date.toLocaleDateString('id-ID', {
-        year: 'numeric',
-        month: 'long',
-        day: 'numeric',
-      });
-
-      // Format Jam
-      const formattedTime = date.toLocaleTimeString('id-ID', {
-        hour: '2-digit',
-        minute: '2-digit',
-      });
-
-      // Menampilkan Tanggal dan Jam secara terpisah
-      const startDateElement = document.getElementById('startDate');
-      const startTimeElement = document.getElementById('startTime');
-      if (startDateElement) {
-        startDateElement.innerHTML = `<span class="mdi mdi-calendar"></span> ${formattedDate}`;
-      }
-      if (startTimeElement) {
-        startTimeElement.innerHTML = `<span class="mdi mdi-clock"></span> ${formattedTime}`;
-      }
-    }
-
-    // Menampilkan jenis live (IDN atau Showroom)
-    const liveTypeElement = document.getElementById('liveType');
-    if (liveTypeElement) {
-      liveTypeElement.innerHTML =
-        liveType === 'idn'
-          ? 'IDN'
-          : liveType === 'showroom'
-          ? 'Showroom'
-          : 'Tidak Diketahui';
-    }
-  });
-</script>
+  // Update URL Hash setiap kali berpindah ke live member baru
+  window.location.hash = `#url=${encodeURIComponent(videoUrl)}&name=${encodeURIComponent(memberName)}&start_date=${encodeURIComponent(startDate)}&type=${encodeURIComponent(liveType)}&slug=${encodeURIComponent(slug)}`;
+});
+  </script>
     <br>
     <br>
     <br>
@@ -215,7 +264,7 @@
         integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/hls.js"></script>
     <script src="https://48streams.vercel.app/player/mousetrap.min.js" charset="utf-8"></script>
-    <script src="../script/nowlive.js"></script>
+    <script src="script/nowlive.js"></script>
     <script src="/middleware/middleware.js"></script>
     <script src="script/player.js"></script>
     <script src="script/inject.js"></script>
