--- a/showroom.html
+++ b/showroom.html
@@ -112,6 +112,20 @@
 
       </div>
     </div>
+                <div style="padding: 0px; width: 91%;">
+          <div style="display: flex; align-items: center; padding: 10px 0;">
+            <div class="live-indicator">
+              <div class="circle"></div>
+              <div class="pulse"></div>
+            </div>
+            <h1 style="font-size: 20px; margin-left: 10px;">Room Live</h1>
+            <div style="margin-left: auto; font-size: 14px; color: #b0b0b0;font-weight: 500;" id="liveCount">0 Member</div>
+          </div>
+          <div id="noLiveMessage" style="text-align: center; color: #b0b0b0;font-weight: 500;"></div>
+          <div style="display: flex;   overflow-x: auto; gap: 10px; margin-top: 20px; width: 100%;" class="card-nowlive-container"></div>
+
+        </div>
+    </div>
     <br>
     <hr><br>
   </div>
