--- a/idn2.html
+++ b/idn2.html
@@ -159,7 +159,7 @@
             <div style="margin-left: auto; font-size: 14px; color: #b0b0b0;font-weight: 500;" id="liveCount">0 Member</div>
           </div>
           <div id="noLiveMessage" style="text-align: center; color: #b0b0b0;font-weight: 500;"></div>
-
+          <div style="display: flex;   overflow-x: auto; gap: 10px; margin-top: 20px; width: 100%;" class="card-nowlive-container"></div>
 
 </div>
         </div>
