--- a/idn2.html
+++ b/idn2.html
@@ -144,7 +144,7 @@
 
           <span style="font-size: 30px;" class="mdi mdi-link"></span>
 
-          <h1 style="font-size: 14px;font-family: 'Zen Maru Gothic';">Buka di IDN Live</h1>
+          <h1 style="font-size: 14px;font-family: 'Zen Maru Gothic';">Tonton di IDN App</h1>
 
 
         
