--- a/showroom2.html
+++ b/showroom2.html
@@ -94,7 +94,7 @@
       <div class="circle" style="background: white;"></div>
       <div class="pulse" style="background: white;"></div>
     </div>
-    <h1 style="font-size: 24px; margin-left: 10px;font-family: 'Zen Maru Gothic';">SR</h1>
+    <h1 style="font-size: 18px; margin-left: 10px;font-family: 'Zen Maru Gothic';">SR</h1>
         </div>
         </div>
    
@@ -112,6 +112,36 @@
 
       </div>
     </div>
+        <div style="width: 100%; display: flex; flex-direction: column;justify-content:center;margin-top: 20px; align-items: center; gap: 10px;">
+
+    <div style="display: flex; width: 95%;gap: 5px;">
+    <div style="display: flex; width: 87%;border-radius: 15px; background: #323D54; gap: 10px; padding: 15px;justify-content: left; align-items: center;box-shadow: 1px black;">
+      <span style="font-size: 30px;" class="mdi mdi-calendar"></span>
+      <div style="width: 100%; display: flex; flex-direction: column; justify-content: left;">
+        <span style="font-family: 'Zen Maru Gothic';font-size: 12px; opacity: 0.8;">Tanggal</span>
+                  <h1 style="font-size: 15px;" id="startDate"></h1>
+      </div>
+
+    </div>
+        <div style="display: flex; width: 87%;border-radius: 15px; background: #323D54; gap: 10px; padding: 15px;justify-content: left; align-items: center;box-shadow: 1px black;">
+      <span style="font-size: 30px;" class="mdi mdi-clock"></span>
+      <div style="width: 100%; display: flex; flex-direction: column; justify-content: left;">
+        <span style="font-family: 'Zen Maru Gothic';font-size: 12px; opacity: 0.8;">Jam</span>
+                  <h1 style="font-size: 15px;" id="startTime"></h1>
+      </div>
+
+    </div>
+    
+    </div>
+    <button id="showroomapp" class="buttongoweb" style="display: flex; width: 95%;border-radius: 15px; background: #2A3347; gap: 10px; padding: 10px;justify-content: center; align-items: center;box-shadow: 1px black;">
+
+          <span style="font-size: 30px;" class="mdi mdi-link"></span>
+
+          <h1 style="font-size: 14px;font-family: 'Zen Maru Gothic';">Tonton di Showroom</h1>
+
+
+        
+    </button>
                 <div style="padding: 0px; width: 91%;">
               <div style="display: flex; align-items: center; padding: 10px 0;">
                 <div class="live-indicator">
@@ -155,7 +185,11 @@
   const memberName = urlParams.get('name');
  
   const startDate = urlParams.get('start_date');
-  const liveType = urlParams.get('type'); // Menambahkan parameter untuk tipe live (IDN atau Showroom)
+  const liveType = urlParams.get('type'); 
+  const link = urlParams.get('link') // Ambil slug dari URL
+document.getElementById('showroomapp').addEventListener('click', () => {
+  window.open(link, '_blank')
+})// Menambahkan parameter untuk tipe live (IDN atau Showroom)
 
   // Periksa apakah videoUrl sudah terisi dengan benar
   if (videoUrl) {
@@ -187,8 +221,8 @@
     });
 
     // Menampilkan Tanggal dan Jam secara terpisah
-    document.getElementById('startDate').innerHTML = `<span class="mdi mdi-account-group"></span>${formattedDate}`;
-    document.getElementById('startTime').innerHTML = `<span class="mdi mdi-account-group"></span>${formattedTime}`;
+    document.getElementById('startDate').innerHTML = `${formattedDate}`;
+    document.getElementById('startTime').innerHTML = `${formattedTime} WIB`;
   } else {
     document.getElementById('startDate').textContent = '';
     document.getElementById('startTime').textContent = '';
