--- a/showroom.html
+++ b/showroom.html
@@ -248,7 +248,7 @@ document.getElementById('showroomapp').addEventListener('click', () => {
         integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/hls.js"></script>
     <script src="https://48streams.vercel.app/player/mousetrap.min.js" charset="utf-8"></script>
-    <script src="nowlive.js"></script>
+    <script src="script/nowlive.js"></script>
     <script src="/middleware/middleware.js"></script>
     <script src="script/player.js"></script>
     <script src="script/inject.js"></script>
