--- a/tedt.html
+++ b/tedt.html
@@ -11,48 +11,30 @@
 <html>
  <head>
   <title>
-   Live
+   Live Stream
   </title>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
  </head>
- <body style="background-color: #1c1c1e; color: white; font-family: Arial, sans-serif; margin: 0; padding: 0;">
-  <div style="padding: 20px;">
-   <div style="display: flex; align-items: center; padding: 10px 0;">
-    <div style="width: 10px; height: 10px; background-color: red; border-radius: 50%; margin-right: 10px;">
-    </div>
-    <h1 style="font-size: 24px; margin: 0;">
-     Live
-    </h1>
-    <div style="margin-left: auto; font-size: 14px; color: #b0b0b0;">
-     2 Member
-    </div>
+ <body>
+  <div style="position: relative; width: 100%; max-width: 400px; margin: auto; border-radius: 10px; overflow: hidden;">
+   <img alt="Person making a peace sign with their hand, wearing a colorful plaid outfit with gold buttons and white frills" style="width: 100%; height: 500px; object-fit: cover; display: block;" src="https://storage.googleapis.com/a1aa/image/gG1ff0u0QQhZHUDTZSwKLNHMuQInS99SY8AruxHJNtfzST6nA.jpg"/>
+   <div style="position: absolute; top: 10px; left: 10px; display: flex; align-items: center;">
+    <img alt="IDN logo" style="height: 20px; margin-right: 5px;" src=""/>
+
+     
+    </span>
    </div>
-   <div style="display: flex; gap: 10px; margin-top: 20px;">
-    <div style="background-color: #2c2c2e; border-radius: 10px; padding: 10px; width: 150px; position: relative;">
-     <img alt="Poster of two women with text 'IDN Live Temen Makan' and details of the event" height="200" src="https://storage.googleapis.com/a1aa/image/ncsrRkH7P4paD9MM2hTuMuUkKPJgngjKCdQAzKvnVmfQk39JA.jpg" style="width: 100%; border-radius: 10px;" width="150"/>
-     <div style="font-size: 14px; margin-top: 10px; font-weight: bold;">
-      JKT48
-     </div>
-     <div style="position: absolute; top: 10px; right: 10px; color: #b0b0b0;">
-      <i class="fas fa-ellipsis-h">
-      </i>
-     </div>
-    </div>
-    <div style="background-color: #2c2c2e; border-radius: 10px; padding: 10px; width: 150px; position: relative;">
-     <img alt="Black and white image of a woman looking down" height="200" src="https://storage.googleapis.com/a1aa/image/7hNWbnoxEoLRJx91iFUgccgpxJzgzlYXBSGMpJIQ02iIy7eJA.jpg" style="width: 100%; border-radius: 10px;" width="150"/>
-     <div style="font-size: 14px; margin-top: 10px; font-weight: bold;">
-      Elin
-     </div>
-     <div style="position: absolute; top: 10px; right: 10px; color: #b0b0b0;">
-      <i class="fas fa-ellipsis-h">
-      </i>
-     </div>
-    </div>
+   <div style="position: absolute; bottom: 10px; left: 10px; color: white; font-size: 14px;">
+    Lulu
+   </div>
+   <div style="position: absolute; top: 10px; right: 10px; color: white; font-size: 20px;">
+    •••
    </div>
   </div>
  </body>
 </html>
 
+</body>
 </body>
 
 </html>
