--- a/showroom.html
+++ b/showroom.html
@@ -153,7 +153,7 @@
               </div>
               <div id="noLiveMessage" style="text-align: center; color: #b0b0b0;font-weight: 500;"></div>
               <div style="display: flex;   overflow-x: auto; gap: 10px; margin-top: 20px; width: 100%;" class="card-nowlive-container"></div>
-
+                </div>
             </div>
             </div>
     <br>
@@ -235,14 +235,6 @@ document.getElementById('showroomapp').addEventListener('click', () => {
     <br>
     <br>
     <br>
-            <footer style="text-align: center; display:flex; justify-content: center; align-items: center; width: 100%;">
-               <p style="color: white;">
-                 
-                 @Januar Adhi N
-               </p> 
-
-                <br>
-            </footer>
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"
         integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
