--- a/drecentlive.html
+++ b/drecentlive.html
@@ -74,12 +74,13 @@
 
       <div class="header_logo">
     <button class="buttongoweb" onclick="goToLink('live.html')"><span class="mdi mdi-chevron-left"></span>    </button>
-        <span style="font-size: 20px; font-weight: 700; font-family: 'Zen Maru Gothic';margin-left: 10px;" >Detail</span>
+
+      <span style="font-size: 20px; font-weight: 700; font-family: 'Zen Maru Gothic';margin-left: 10px;"  >Detail Recent</span>
       </div>
                 </div>
   
         <div class="profile" style="display: flex; align-items: center; margin-top: 50px;">
-            <img id="profile-img" src="" alt="Member Profile" style="width: 80px; height: 80px; object-fit: cover; border-radius: 50%; margin-right: 1rem;">
+            <img id="profile-img" src="" alt="Member Profile" style="width: 80px; height: 80px; object-fit: cover; border-radius: 50%; margin-right: 1rem;box-shadow: 2px black;">
             <div>
                 <h1 id="member-name" style="font-size: 1.5rem; margin: 0;"></h1>
                 <span class="badge" id="badge" style="background-color: #00EC4F; padding:  3px 10px; border-radius: 10px; color: #fff; font-size: 0.8rem;"></span>
@@ -130,7 +131,7 @@
       <span style="font-size: 30px;" class="mdi mdi-history"></span>
 <h1 style="font-size: 20px;">Other Recent Live</h1>
   </div>
-    <div class="container"style="margin-top: -20px;">
+    <div class="container"style="margin-top: -40px;">
         <div class="flex-container">
             <!-- Tombol untuk menampilkan semua konten -->
 
