--- a/drecentlive.html
+++ b/drecentlive.html
@@ -104,7 +104,7 @@
           <span style="font-size: 37px;color:#FFE52D;" class="mdi mdi-timer"></span>
     <div style="width: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center;">
       <h1 style="font-size: 21px;font-family: 'Zen Maru Gothic';" id="live-duration"></h1>
-      <span style="font-size: 11px; opacity: 0.8;">Duration</span>
+      <span style="font-size: 11px; opacity: 0.8;">Durasi</span>
     </div>
     </div>
         <div style="display: flex; width: 100%;gap: 5px;">
