--- a/drecentlive.html
+++ b/drecentlive.html
@@ -88,9 +88,9 @@
             </div>
         </div>
 <div style="display: flex; width: 100%; flex-direction: column;gap: 10px;margin-top: 20px;">
-  <div style="display: flex; width: 100%; background-color: #323D54; justify-content: center; align-items: center; padding: 15px; border-radius: 20px;">
+  <div style="display: flex; width: 100%; background-color: #323D54; justify-content: left; align-items: left; padding: 15px; border-radius: 20px;">
     <span style="font-size: 37px;color: #FF3E3E;" class="mdi mdi-clipboard-text-clock"></span>
-    <div style="width: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center;">
+    <div style="width: 84%; display: flex; flex-direction: column; justify-content: center; align-items: center;">
       <h1 style="font-size: 21px;font-family: 'Zen Maru Gothic';" id="live-date"></h1>
           <div style="width: 100%; display: flex; justify-content: center; align-items: center; gap: 5px;">
       <span id="live-time" style="font-size: 11px; opacity: 0.8;"></span>
@@ -100,25 +100,25 @@
     </div>
     </div>
   </div>
-    <div style="display: flex; width: 100%; background-color: #323D54; justify-content: center; align-items: center; padding: 15px; border-radius: 20px;">
+    <div style="display: flex; width: 100%; background-color: #323D54; justify-content: left; align-items: left; padding: 15px; border-radius: 20px;">
           <span style="font-size: 37px;color:#FFE52D;" class="mdi mdi-timer"></span>
-    <div style="width: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center;">
+    <div style="width: 84%; text-align: center; display: flex; flex-direction: column; justify-content: center; align-items: center;">
       <h1 style="font-size: 21px;font-family: 'Zen Maru Gothic';" id="live-duration"></h1>
       <span style="font-size: 11px; opacity: 0.8;">Durasi</span>
     </div>
     </div>
         <div style="display: flex; width: 100%;gap: 5px;">
-    <div style="display: flex; width: 100%;border-radius: 15px; background: #323D54; gap: 10px; padding: 15px;justify-content: left; align-items: center;box-shadow: 1px black;">
+    <div style="display: flex; width: 100%;border-radius: 15px; background: #323D54; gap: 10px; padding: 15px;justify-content: left; align-items: left;box-shadow: 1px black;">
       <span style="font-size: 30px;" class="mdi mdi-gift"></span>
-      <div style="width: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center;">
+      <div style="width: 85%; display: flex; flex-direction: column; justify-content: center; align-items: center;">
                   <h1 style="font-size: 17px;" id="gift"></h1>
                   <span style="font-family: 'Zen Maru Gothic';font-size: 12px; opacity: 0.8;">Gift</span>
       </div>
 
     </div>
-        <div style="display: flex; width: 100%;border-radius: 15px; background: #323D54; gap: 10px; padding: 15px;justify-content: left; align-items: center;box-shadow: 1px black;">
+        <div style="display: flex; width: 100%;border-radius: 15px; background: #323D54; gap: 10px; padding: 15px;justify-content: left; align-items: left;box-shadow: 1px black;">
       <span style="font-size: 30px;" class="mdi mdi-eye"></span>
-      <div style="width: 100%; display: flex; flex-direction: column; justify-content: center;align-items: center;">
+      <div style="width: 85%; display: flex; flex-direction: column; justify-content: center;align-items: center;">
                   <h1 style="font-size: 17px;" id="viewers"></h1>
                   <span style="font-family: 'Zen Maru Gothic';font-size: 12px; opacity: 0.8;">View</span>
       </div>
