--- a/drecentlive.html
+++ b/drecentlive.html
@@ -78,8 +78,11 @@
       <span style="font-size: 20px; font-weight: 700; font-family: 'Zen Maru Gothic';margin-left: 10px;"  >Detail Recent</span>
       </div>
                 </div>
-  
-        <div class="profile" style="display: flex; align-items: center; margin-top: 50px;">
+          <button class="buttongoweb" onclick="goToLink('https://youtu.be/Ztg79dr34n4?si=TDiW-J8Wd32P-AxA')">
+             <img src="assets/banner-mv-bym.jpeg" style="object-fit: cover; width: 100%; height: 150px; margin-top: 45px;opacity: 0.9;">
+          </button>
+        <div class="profile" style="display: flex; align-items: center; margin-top: 10px;">
+
             <img id="profile-img" src="" alt="Member Profile" style="width: 80px; height: 80px; object-fit: cover; border-radius: 50%; margin-right: 1rem;box-shadow: 2px black;">
             <div>
                 <h1 id="member-name" style="font-size: 1.5rem; margin: 0;"></h1>
@@ -87,7 +90,7 @@
 
             </div>
         </div>
-<div style="display: flex; width: 100%; flex-direction: column;gap: 10px;margin-top: 20px;">
+<div style="display: flex; width: 100%; flex-direction: column;gap: 10px;margin-top: 15px;">
   <div style="display: flex; width: 100%; background-color: #323D54; justify-content: left; align-items: left; padding: 15px; border-radius: 20px;">
     <span style="font-size: 37px;color: #FF3E3E;" class="mdi mdi-clipboard-text-clock"></span>
     <div style="width: 84%; display: flex; flex-direction: column; justify-content: center; align-items: center;">
