--- a/drecentlive.html
+++ b/drecentlive.html
@@ -85,7 +85,7 @@
 
             <img id="profile-img" src="" alt="Member Profile" style="width: 80px; height: 80px; object-fit: cover; border-radius: 50%; margin-right: 1rem;box-shadow: 2px black;">
             <div>
-                <h1 id="member-name" style="font-size: 1.5rem; margin: 0;"></h1>
+                <h1 id="member-name" style="font-size: 1.5rem; font-family: 'Quicksand';"></h1>
                 <span class="badge" id="badge" style="background-color: #00EC4F; padding:  3px 10px; border-radius: 10px; color: #fff; font-size: 0.8rem;"></span>
 
             </div>
