--- a/drecentlive.html
+++ b/drecentlive.html
@@ -96,9 +96,9 @@
     <div style="width: 84%; display: flex; flex-direction: column; justify-content: center; align-items: center;">
       <h1 style="font-size: 21px;font-family: 'Zen Maru Gothic';" id="live-date"></h1>
           <div style="width: 100%; display: flex; justify-content: center; align-items: center; gap: 5px;">
-      <span id="live-time" style="font-size: 11px; opacity: 0.8;"></span>
-      <span  style="font-size: 11px; opacity: 0.8;">-</span>
-      <span id="live-end-time" style="font-size: 11px; opacity: 0.8;"></span>
+      <span id="live-time" style="font-size: 13px; opacity: 0.8;"></span>
+      <span  style="font-size: 13px; opacity: 0.8;">-</span>
+      <span id="live-end-time" style="font-size: 13px; opacity: 0.8;"></span>
 
     </div>
     </div>
@@ -177,51 +177,52 @@
 
 
     <script>
-        document.addEventListener("DOMContentLoaded", function () {
-    const urlParams = new URLSearchParams(window.location.search);
-    const liveId = urlParams.get("id");
-    const liveStart = urlParams.get("start");
-    const liveEnd = urlParams.get("end");
-    const gift = urlParams.get("gift");
-    const view = urlParams.get("view");
-    const nama = urlParams.get("nama");
-    const image = urlParams.get("image");
+        document.addEventListener("DOMContentLoaded", function() {
+  const urlParams = new URLSearchParams(window.location.search);
+  const liveId = urlParams.get("id");
+  const liveStart = urlParams.get("start");
+  const liveEnd = urlParams.get("end");
+  const gift = urlParams.get("gift");
+  const view = urlParams.get("view");
+  const nama = urlParams.get("nama");
+  const image = urlParams.get("image");
 
-    fetch(`https://api.crstlnz.my.id/api/live-details/${liveId}`)
-        .then(response => response.json())
-        .then(data => {
-            const startDate = new Date(liveStart);
-            const endDate = new Date(liveEnd);
+  fetch(`https://api.crstlnz.my.id/api/live-details/${liveId}`)
+    .then(response => response.json())
+    .then(data => {
+      const startDate = new Date(liveStart);
+      const endDate = new Date(liveEnd);
 
-            // Format tanggal, waktu, dan hari
-            const options = { weekday: 'long', day: 'numeric', month: 'long', year: 'numeric' };
-            const formattedDate = startDate.toLocaleDateString('id-ID', options);
-            const formattedStartTime = startDate.toLocaleTimeString('id-ID', { hour: '2-digit', minute: '2-digit', hour12: true });
-            const formattedEndTime = endDate.toLocaleTimeString('id-ID', { hour: '2-digit', minute: '2-digit', hour12: true });
+      // Format tanggal, waktu, dan hari
+      const options = { weekday: 'long', day: 'numeric', month: 'long', year: 'numeric' };
+      const formattedDate = startDate.toLocaleDateString('id-ID', options);
 
-            document.getElementById("profile-img").src = `${image}` || "https://via.placeholder.com/80";
-            document.getElementById("member-name").textContent = `${nama} JKT48`;
-            document.getElementById("badge").textContent = data.sousenkyo || "Active";
+      const formattedStartTime = startDate.toLocaleTimeString('id-ID', { hour: '2-digit', minute: '2-digit' });
+      const formattedEndTime = endDate.toLocaleTimeString('id-ID', { hour: '2-digit', minute: '2-digit' });
 
-            document.getElementById("live-date").textContent = formattedDate;
-            document.getElementById("live-time").textContent = `${formattedStartTime}`;
-            document.getElementById("live-end-time").textContent = `${formattedEndTime}`;
-            document.getElementById("live-duration").textContent = calculateDuration(liveStart, liveEnd);
-            document.getElementById("gift").textContent = `${gift} G`;
-            document.getElementById("viewers").textContent = `${parseInt(view).toLocaleString('id-ID')}`;
-        })
-        .catch((error) => console.error("Error fetching live details:", error));
+      document.getElementById("profile-img").src = `${image}` || "https://via.placeholder.com/80";
+      document.getElementById("member-name").textContent = `${nama} JKT48`;
+      document.getElementById("badge").textContent = data.sousenkyo || "Active";
 
-    function calculateDuration(start, end) {
-        const startDate = new Date(start);
-        const endDate = new Date(end);
-        const durationMs = endDate - startDate;
+      document.getElementById("live-date").textContent = formattedDate;
+      document.getElementById("live-time").textContent = `${formattedStartTime}`;
+      document.getElementById("live-end-time").textContent = `${formattedEndTime}`;
+      document.getElementById("live-duration").textContent = calculateDuration(liveStart, liveEnd);
+      document.getElementById("gift").textContent = `${gift} G`;
+      document.getElementById("viewers").textContent = `${parseInt(view).toLocaleString('id-ID')}`;
+    })
+    .catch((error) => console.error("Error fetching live details:", error));
 
-        const hours = Math.floor(durationMs / 3600000);
-        const minutes = Math.floor((durationMs % 3600000) / 60000);
+  function calculateDuration(start, end) {
+    const startDate = new Date(start);
+    const endDate = new Date(end);
+    const durationMs = endDate - startDate;
 
-        return hours > 0 ? `${hours} Jam ${minutes} Menit` : `${minutes} Menit`;
-    }
+    const hours = Math.floor(durationMs / 3600000);
+    const minutes = Math.floor((durationMs % 3600000) / 60000);
+
+    return hours > 0 ? `${hours} Jam ${minutes} Menit` : `${minutes} Menit`;
+  }
 });
     </script>
         <script src="../script/main.js"></script>
